--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
                 <div class="testimonial-text">
                     <h2>TESTIMONIAL</h2>
                     <h1>What Our Users<br> Say About Us?</h1>
+                    <h3>The Best Financial Accounting <br>App Ever!</h3>
                     <blockquote>
-                        <h3>"The Best Financial Accounting <br>App Ever!"</h3>
                         <p>“Arcu At Dictum Sapien, Mollis, Vulputate Sit Id<br>
                             Acousman, Ultricies. In Ultricies Malesuada Elit<br>
                             Mauris Etiam Odio. Duis Tristique Locus, Et Blanit<br>
@@ -158,15 +158,15 @@
                             Suspendisse Sit Nuno, Gravida Elit. Loetus Eget Eget<br>
                             Ac Dolor Neque Lorem Sapien, Suspendisse<br>
                             Aliquam.”</p>
-                        <footer>Nick Jonas</footer>
                     </blockquote>
                     <div class="testimonial-users">
-                        <img src="/company work/user1.png" alt="User 6" class="testimonial-user">
-                        <img src="/company work/user2.png" alt="User 7" class="testimonial-user1">
-                        <img src="/company work/user3.png" alt="User 8" class="testimonial-user">
-                        <img src="/company work/user4.png" alt="User 9" class="testimonial-user">
-                        <img src="/company work/user5.png" alt="User 10" class="testimonial-user">
+                        <img src="/company work/user1.png" alt="User 6" class="testimonial-user6">
+                        <img src="/company work/user2.png" alt="User 7" class="testimonial-user7">
+                        <img src="/company work/user3.png" alt="User 8" class="testimonial-user8">
+                        <img src="/company work/user4.png" alt="User 9" class="testimonial-user9">
+                        <img src="/company work/user5.png" alt="User 10" class="testimonial-user10">
                     </div>
+                    <footer>Nick Jonas</footer>
                 </div>
             </div>
         </section>
@@ -189,7 +189,7 @@
                 </div>
                 <div class="faq-item red">
                     <h3>The Best Financial Accounting App Ever!</h3>
-                    <p>Arcu At Dictum Sapien, Mollis. Volutpatute Sit Id Acuomusan, Ultricles. In Ultrices Malesuada Elit Mauris.</p>
+                    <p>Arcu At Dictum Sapien, Mollis. Volutpatute Sit Id Acuomusan , Ultricles. In Ultrices Malesuada Elit Mauris.</p>
                 </div>
                 <div class="faq-item red">
                     <h3>The Best Financial Accounting App Ever!</h3>
