--- a/index.html
+++ b/index.html
@@ -145,10 +145,11 @@
                     <img src="/company work/user10.png" alt="User 5" class="user user5">
                     <img src="/company work/ellipse.png" alt="User 5" class="user ellipse">
                     <img src="/company work/mark.png" alt="User 5" class="user mark">
+                    <img src="/company work/colour.png" alt="Pink Color" class="colour6">
                 </div>
                 <div class="testimonial-text">
                     <h2>TESTIMONIAL</h2>
-                    <h1>What Our Users<br> Say About Us?</h1>
+                    <b><h1>What Our Users Say About Us?</h1></b>
                     <h3>The Best Financial Accounting <br>App Ever!</h3>
                     <blockquote>
                         <p>“Arcu At Dictum Sapien, Mollis, Vulputate Sit Id<br>
@@ -207,12 +208,15 @@
                 <div class="left">
                     <h1>Ready To Get Started?</h1>
                     <p>Risus Habitant Leo Egestas Mauris Diam Eget Morbi Tempus Vulputate.</p>
-                    <a href="#" class="download-btn">Download App</a>
+                    <a href="#" class="download-btn">
+                        Download App
+                        <img src="/company work/apple.jpg" alt="Download Button" class="apple">
+                    </a>
                 </div>
                 <div class="right">
-                    <img src="phone1.png" alt="Phone 1">
-                    <img src="phone2.png" alt="Phone 2">
-                    <img src="phone3.png" alt="Phone 3">
+                    <img src="phone1.png" alt="phone4">
+                    <img src="phone2.png" alt="phone5">
+                    <img src="phone3.png" alt="phone6">
                 </div>
             </div>
             <div class="stars">
