--- a/index.html
+++ b/index.html
@@ -227,6 +227,53 @@
                 <div class="star" style="top: 50%; left: 80%;"></div>
             </div>
     </main>
+
+    <footer>
+        <div class="footer-container">
+            <div class="footer-column">
+                <img src="logo.png" alt="Uifry Logo" class="footer-logo">
+                <p>Help@Frybix.Com</p>
+                <p>+1234 456 678 89</p>
+            </div>
+            <div class="footer-column">
+                <h3>Links</h3>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Bookings</a></li>
+                    <li><a href="#">Blog</a></li>
+                </ul>
+            </div>
+            <div class="footer-column">
+                <h3>Legal</h3>
+                <ul>
+                    <li><a href="#">Terms Of Use</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Cookie Policy</a></li>
+                </ul>
+            </div>
+            <div class="footer-column">
+                <h3>Product</h3>
+                <ul>
+                    <li><a href="#">Take Tour</a></li>
+                    <li><a href="#">Live Chat</a></li>
+                    <li><a href="#">Reviews</a></li>
+                </ul>
+            </div>
+            <div class="footer-column">
+                <h3>Newsletter</h3>
+                <form>
+                    <label for="email">Stay Up To Date</label>
+                    <input type="email" id="email" placeholder="Your email">
+                    <button type="submit">Subscribe</button>
+                </form>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>Copyright 2022 Uifry.Com All Rights Reserved</p>
+        </div>
+    </footer>
+    
     <script src="script.js"></script>
 </body>
 </html>
